src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #242038;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}
/* nav bar */
nav {
  background-color: #725AC1;
}

nav a {
  text-decoration: none;
  color: #F4F3EE;
  transition: color 0.5s ease-in-out;
}

.inactive-home {
  color: #F4F3EE!important;
}

.active {
  color: #242038;
}

nav a:hover {
  color: #242038;
}

nav ul{
  padding-top: 1em;
  padding-bottom: 1em;
  margin: 0;
  list-style-type: none;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  justify-content: space-between;
}

#home-icon a{
  display: flex;
  align-items: center;
  font-size: 1.4em;
  width: 20%;
}

#home-icon svg {
  padding-right: 5%;
}

#non-home-nav {
  width: 60%;
  list-style-type: none;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-around;
  font-size: 1.2em;
}

/* scatter plot screen */
.scatter-screen {
  padding: 3%;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.scatter-dropdowns-container {
  display: flex;
  width: 40%;
  justify-content: space-around; 
  padding-top: 2%;
  padding-bottom: 2%;
}

.scatter-dropdown h4 {
  margin-bottom: 2%;
}

/* histogram screen */
.histo-screen {
  padding: 3%;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.instructions-list {
  width: 40%;
}

.instructions-list li {
  font-weight: bold;
  padding: 2%;
}

.histo-screen h3{
  margin-bottom: 0;
}

.histo-screen h4{
  margin-bottom: 0;
}

.histo-dropdown {
  width: 60%;
  padding-bottom: 2%;
  padding-top: 1%;
  text-align: center;
}

.min-max-inputs {
  display: flex;
  padding: 1%;
  justify-content: space-between;
  width: 40%;
}

.min-max-inputs div {
  display: flex;
  flex-direction: column;
}

.min-max-inputs label {
  margin-bottom: 3%;
}

.min-max-inputs input {
  text-align: center;
  font-size: 1.1em;
}

.error-message {
  color: red;
}

.select-all-container {
  display: flex;
  align-items: center;
}

.instructions {
  font-size: 1.2em;
}

